[tool.poetry]
name = "Beatrice"
version = "0.3.1"
description = ""
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = {extras = ["voice"], version = "^2.0"}
bs4 = "^0.0.1"
lxml = "^4.8.0"
aiohttp = "^3.8.1"
aioconsole = "^0.5.0"
dateparser = "^1.1.0"
numpy = "^1.22.2"
yt-dlp = "^2022.2.4"
aiofiles = "^0.8.0"
uvloop = { version = "^0.16.0", optional = true }
ormar = "^0.11.2"
aiomysql = { version = "^0.1.1", optional = true }
PyMySQL = { version = "^1.0.2", optional = true }
aiosqlite = { version = "^0.17.0", optional = true }
nextcord-ormar = "^0.3"
aiodns = { version = "^3.0.0", optional = true }
Brotli = { version = "^1.0.9", optional = true }
cchardet = { version = "^2.1.7", optional = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
beatrice = 'beatrice.main:main'

[tool.poetry.extras]
uvloop = ["uvloop"]
mysql = ["aiomysql", "PyMySQL"]
sqlite = ["aiosqlite"]
speed = ["aiodns", "Brotli", "cchardet"]