[tool.poetry]
name = "Beatrice"
version = "0.3.0"
description = ""
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = {extras = ["voice"], version = "^2.5"}
bs4 = "^0.0.1"
lxml = "^4.8.0"
aiohttp = "^3.8.1"
aioconsole = "^0.6"
dateparser = "^1.1.0"
numpy = { version = "^1.24", optional = true }
yt-dlp = { version = "^2023.7.6", optional = true }
aiofiles = "^0.8.0"
uvloop = { version = "^0.16.0", optional = true }
ormar = "^0.11.2"
aiomysql = { version = "^0.1.1", optional = true }
PyMySQL = { version = "^1.0.2", optional = true }
aiosqlite = { version = "^0.19", optional = true }
nextcord-ormar = "^0.3"
aiodns = { version = "^3.0.0", optional = true }
Brotli = { version = "^1.0.9", optional = true }
cchardet = { version = "^2.1.7", optional = true }
openai = "^0.27"
tiktoken = "^0.4"
anthropic = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
beatrice = 'beatrice.main:main'

[tool.poetry.extras]
uvloop = ["uvloop"]
mysql = ["aiomysql", "PyMySQL"]
sqlite = ["aiosqlite"]
speed = ["aiodns", "Brotli", "cchardet"]
audio = ["numpy", "yt-dlp"]
